--- a/css/styles.css
+++ b/css/styles.css
@@ -696,3 +696,72 @@ section {
   border-radius: 4px;
   margin: 0 auto;
 }
+.modal-menu {
+  width: 100%;
+  height: 100%;
+  background-color: #ffffff;
+  position: fixed;
+  visibility: hidden;
+  opacity: 0;
+  z-index: 999;
+  top: 0;
+  left: 0;
+  padding: 72px 16px 40px;
+  box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.14), 0 1px 3px 0 rgba(0, 0, 0, 0.12),
+    0 2px 1px 0 rgba(0, 0, 0, 0.2);
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.modal-menu.is-open {
+  opacity: 1;
+  visibility: visible;
+}
+@media (min-resolution: 192dpi) and (min-width: 320px) {
+  .modal-button {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    cursor: pointer;
+    top: 24px;
+    right: 24px;
+    width: 24px;
+    height: 24px;
+    border-radius: 50%;
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    padding: 0;
+    background-color: #fdfdff;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+      border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  .modal-ul {
+    padding-left: 16px;
+  }
+  .modal-item {
+    margin-bottom: 40px;
+  }
+}
+
+.modal-item-link {
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.11;
+  letter-spacing: 0.02em;
+  color: #2e2f42;
+}
+/* @media (min-resolution: 192dpi) and (min-width: 320px) {
+  .section-one {
+    max-width: 320px;
+    margin-right: auto;
+    margin-left: auto;
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size: cover;
+    background-image: linear-gradient(
+        to bottom,
+        rgba(46, 47, 66, 0.7),
+        rgba(46, 47, 66, 0.7)
+      ),
+      url(../images/background.jpg);
+  }
+} */
