--- a/css/styles.css
+++ b/css/styles.css
@@ -7,6 +7,9 @@ body {
 a {
   text-decoration: none;
 }
+.hidden {
+  display: none !important;
+}
 h1,
 h2,
 h3,
@@ -420,6 +423,7 @@ section {
 .img {
   background-color: #ffffff;
 }
+/* fooooooteeeeerrrr */
 .footer-container {
   display: flex;
   align-items: baseline;
@@ -696,6 +700,7 @@ section {
   border-radius: 4px;
   margin: 0 auto;
 }
+
 .modal-menu {
   width: 100%;
   height: 100%;
@@ -736,6 +741,7 @@ section {
   }
   .modal-ul {
     padding-left: 16px;
+    margin-bottom: 168px;
   }
   .modal-item {
     margin-bottom: 40px;
@@ -748,6 +754,56 @@ section {
   line-height: 1.11;
   letter-spacing: 0.02em;
   color: #2e2f42;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.modal-item-link:hover,
+.modal-item-link:focus {
+  color: #404bbf;
+}
+.mob-menu-contact-item {
+  font-style: normal;
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 1.2;
+  letter-spacing: 0.02em;
+  color: #434455;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.mob-menu-contact-item:hover,
+.mob-menu-contact-item:focus {
+  color: #4d5ae5;
+}
+.mob-menu-contact {
+  margin-bottom: 24px;
+}
+.mob-svg {
+  fill: #f4f4fd;
+}
+.mob-menu-list {
+  margin-bottom: 48px;
+}
+.mob-social-media-list {
+  display: flex;
+  justify-content: center;
+  gap: 40px;
+}
+.mob-social-media-svg {
+  width: 40px;
+  height: 40px;
+}
+.mob-social-media-link {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+  background-color: #4d5ae5;
+  border-radius: 50%;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.mob-social-media-link:hover,
+.mob-social-media-link:focus {
+  background-color: #31d0aa;
 }
 /* @media (min-resolution: 192dpi) and (min-width: 320px) {
   .section-one {
