--- a/css/mob-styles.css
+++ b/css/mob-styles.css
@@ -34,6 +34,7 @@
   }
   img {
     display: block;
+    max-width: 100%;
   }
   button {
     display: block;
@@ -114,6 +115,7 @@
   }
   .section-two {
     margin-top: 96px;
+    margin-bottom: 96px;
   }
   .heading {
     font-weight: 700;
@@ -129,5 +131,79 @@
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: #434455;
+  }
+  .section-three {
+    background: #f4f4fd;
+    padding-bottom: 96px;
+  }
+  .team {
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 1.11;
+    letter-spacing: 0.02em;
+    text-align: center;
+    color: #2e2f42;
+    padding-top: 96px;
+    margin-bottom: 72px;
+  }
+  .list-item {
+    background-color: #ffffff;
+    border-radius: 0px 0px 4px 4px;
+    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+      0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+    width: 264px;
+  }
+  .names {
+    margin-bottom: 8px;
+    text-align: center;
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 1.2;
+    letter-spacing: 0.02em;
+    color: #2e2f42;
+  }
+  .paragraf-names {
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    text-align: center;
+    color: #434455;
+  }
+  .workers {
+    max-width: 360px;
+    margin: 0 auto;
+    padding: 0 16px;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    gap: 72px;
+  }
+  .social-links {
+    width: 40px;
+    height: 40px;
+  }
+  .social-icons {
+    display: flex;
+    justify-content: center;
+    gap: 24px;
+  }
+  .social-item {
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 100%;
+    background-color: #4d5ae5;
+    border-radius: 50%;
+  }
+  .svg-team {
+    fill: #f4f4fd;
+  }
+  .workersstyle {
+    padding-top: 32px;
+    padding-bottom: 32px;
+    border-radius: 0 0 4px 4px;
   }
 }
