--- a/css/mob-styles.css
+++ b/css/mob-styles.css
@@ -283,6 +283,9 @@
 }
 
 @media screen and (min-width: 320px) {
+  .svg-section-two {
+    display: none;
+  }
   .secondnavigation {
     display: none;
   }
@@ -298,7 +301,7 @@
     background-color: #ffffff;
   }
   .container {
-    max-width: 320px;
+    width: 320px;
     margin: 0 auto;
     padding: 0 16px;
   }
@@ -467,7 +470,7 @@ a {
   color: #434455;
 }
 .workers {
-  max-width: 360px;
+  width: 360px;
   margin: 0 auto;
   padding: 0 16px;
   display: flex;
@@ -517,7 +520,7 @@ a {
   margin-bottom: 72px;
 }
 .portfolio-image {
-  max-width: 288px;
+  width: 288px;
   height: 280px;
 }
 .apps-list {
@@ -584,7 +587,7 @@ a {
 
 /* =============foooterrrrr========= */
 .footer {
-  max-width: 320px;
+  width: 100%;
   background: #2e2f42;
   padding: 100px 0;
 }
@@ -792,6 +795,7 @@ a {
     display: flex;
     flex-direction: column;
     gap: 12px;
+    margin-left: 122px;
   }
   .address {
     display: block;
@@ -861,23 +865,366 @@ a {
   }
   /* ====================foooter============ */
   .footer {
-    max-width: 768px;
+    max-width: 100%;
   }
   .footer-div {
     text-align: left;
   }
   .social-footer {
     text-align: left;
+    margin-top: 0;
   }
   .footer-container {
-    flex-direction: row;
+    display: flex;
     flex-wrap: wrap;
     column-gap: 24px;
     margin-left: 108px;
   }
-  .social-footer {
+  .par-form {
+    text-align: left;
+  }
+  .form-form {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
+    gap: 24px;
+  }
+  .btn-form {
+    margin: 0;
+  }
+  .modal-window {
+    width: 408px;
+    height: 584px;
+  }
+}
+/* ==================dekstop=============== */
+@media (min-width: 1158px) {
+  .container {
+    width: 1158px;
+    padding: 0 15px;
+    margin: 0 auto;
+  }
+  .header-burger {
+    display: none;
+  }
+  .header {
+    box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08),
+      0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
+    border-bottom: 1px solid #e7e9fc;
+  }
+  .container-logo {
+    margin-right: 76px;
+  }
+  .firstnavigation {
+    display: flex;
     align-items: center;
+  }
+  .secondnavigation {
+    display: flex;
+    gap: 40px;
+  }
+  .navigation-item a {
+    color: #404bbf;
+  }
+  .navigation:hover {
+    color: #404bbf;
+  }
+  .navigation:focus {
+    color: #404bbf;
+  }
+  .contact_list {
+    display: flex;
+    gap: 40px;
+    font-style: normal;
+  }
+  .navigation {
+    font-weight: 500;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #2e2f42;
+    padding-top: 24px;
+    padding-bottom: 24px;
+    display: block;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  .contacts {
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #434455;
+    display: block;
+    padding-top: 24px;
+    padding-bottom: 24px;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  .studio-navigation::after {
+    content: "";
+    width: 100%;
+    position: absolute;
+    left: 0;
+    bottom: -1px;
+    height: 4px;
+    background-color: #404bbf;
+    border-radius: 2px;
+  }
+  .studio-navigation {
+    display: block;
+    position: relative;
+    color: #404bbf;
+  }
+  .contacts:hover {
+    color: #404bbf;
+  }
+  .contacts:focus {
+    color: #404bbf;
+  }
+  .logo-type {
+    margin-right: 76px;
+  }
+  .header-container {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
+  .second-contact {
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  /* =================first-section=-=========== */
+  .section-one {
+    max-width: 1440px;
+    margin-right: auto;
+    margin-left: auto;
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size: cover;
+    background-image: linear-gradient(
+        to bottom,
+        rgba(46, 47, 66, 0.7),
+        rgba(46, 47, 66, 0.7)
+      ),
+      url(../images/background-pc-x1.jpg);
+    padding: 188px 0;
+    height: 600px;
+  }
+  .section-container {
+    max-width: 1440px;
+  }
+  .zagolovok {
+    font-size: 56px;
+    line-height: 1.07;
+    letter-spacing: 0.02em;
+    color: #fff;
+    max-width: 496px;
+    margin: 0 auto;
+  }
+  .buttonn {
+    margin-top: 48px;
+    line-height: 1.5;
+    letter-spacing: 0.04em;
+    color: #fff;
+    background-color: #4d5ae5;
+  }
+  .buttonn:hover {
+    background-color: #404bbf;
+  }
+  .buttonn:focus {
+    background-color: #404bbf;
+  }
+  /* ================section 2============== */
+  .icon-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 8px;
+    height: 112px;
+    background: #f4f4fd;
+    border: 1px solid #8e8f99;
+    border-radius: 4px;
+  }
+  .visually-hidden {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    margin: -1px;
+    border: 0;
+    padding: 0;
+    white-space: nowrap;
+    clip-path: inset(100%);
+    clip: rect(0 0 0 0);
+    overflow: hidden;
+  }
+  .list {
+    display: flex;
+    gap: 24px;
+    list-style: none;
+    padding: 0;
+    margin: 0;
+  }
+  .heading {
+    margin-bottom: 8px;
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 1.2;
+    letter-spacing: 0.02em;
+    color: #2e2f42;
+    text-align: left;
+  }
+  .pharagraf {
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #434455;
+    width: 264px;
+  }
+  /* ================section 3============ */
+  .section-three {
+    background: #f4f4fd;
+  }
+  .team {
+    font-size: 36px;
+    line-height: 1.11;
+    letter-spacing: 0.02em;
+    text-align: center;
+    color: #2e2f42;
+    text-transform: capitalize;
+    margin-bottom: 72px;
+  }
+  .list-item {
+    background-color: #ffffff;
+    border-radius: 0px 0px 4px 4px;
+    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+      0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+    width: 100%;
+    height: 100%;
+  }
+  .workers {
+    display: flex;
+    gap: 24px;
+    flex-direction: row;
+    flex-wrap: nowrap;
+  }
+  .div-workers {
+    padding-top: 32px;
+    padding-bottom: 32px;
+  }
+  .social-icons {
+    display: flex;
+    justify-content: center;
+    gap: 24px;
+  }
+  .social-links {
+    width: 40px;
+    height: 40px;
+  }
+  .social-item {
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 100%;
+    background-color: #4d5ae5;
+    border-radius: 50%;
+  }
+  .workers-img {
+    max-width: 264px;
+  }
+  .paragraf-names {
+    text-align: center;
+    margin-bottom: 8px;
+  }
+  /* =================section 4=============== */
+  .portfolio {
+    font-size: 36px;
+    line-height: 1.11;
+    letter-spacing: 0.02em;
+    text-align: center;
+    color: #2e2f42;
+    text-transform: capitalize;
+    margin-bottom: 72px;
+  }
+  .portfolio-list {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    column-gap: 24px;
+    row-gap: 48px;
+    list-style: none;
+    padding: 0;
+    margin: 0;
+  }
+  .apps-list {
+    width: 360px;
+  }
+  .portfolio-image {
+    width: 360px;
+  }
+  /* fooooterrrr */
+  .footer {
+    max-width: 1440px;
+  }
+  .logo-type-footer {
+    font-family: "Raleway", sans-serif;
+    font-weight: 700;
+    font-size: 18px;
+    line-height: 1.17;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+    color: #4d5ae5;
+    margin-bottom: 16px;
+    text-align: left;
+  }
+  .footer-container {
+    display: flex;
+    align-items: baseline;
+  }
+  .footer-div {
+    margin-right: 120px;
+    text-align: left;
+  }
+  .social-ph {
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #ffffff;
+    margin-bottom: 16px;
+    text-align: left;
+  }
+  .social-list {
+    display: flex;
+    gap: 16px;
+  }
+  .div-form {
+    margin-left: 80px;
+  }
+  .form-form {
+    display: flex;
+    flex-direction: row;
+    gap: 24px;
+  }
+  .par-form {
+    margin-bottom: 16px;
+    text-align: left;
+  }
+  .input-form {
+    width: 264px;
+  }
+  .btn-form {
+    margin: 0;
+  }
+  /* modal-window */
+  .modal-window {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 408px;
+    min-height: 584px;
+    background: #fcfcfc;
+    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12),
+      0px 2px 1px rgba(0, 0, 0, 0.2);
+    border-radius: 4px;
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    padding: 72px 24px 24px 24px;
   }
 }
