--- a/css/mob-styles.css
+++ b/css/mob-styles.css
@@ -13,7 +13,7 @@
 }
 .container-modal {
   max-width: 320px;
-  margin: 0;
+  margin: 0 auto;
 }
 .mob-menu-contact {
   margin-bottom: 24px;
@@ -409,7 +409,7 @@ a {
 }
 /* ===============section------1-------------------- */
 .section-one {
-  width: 320px;
+  max-width: 320px;
   padding: 72px 0;
   margin: 0 auto;
   background-image: linear-gradient(
@@ -862,7 +862,7 @@ a {
   }
   /* =================first-section================ */
   .section-one {
-    width: 768px;
+    max-width: 768px;
     padding: 112px 0;
     background-image: linear-gradient(
         to bottom,
@@ -999,7 +999,7 @@ a {
   }
   /* section 1 */
   .section-one {
-    width: 1440px;
+    max-width: 1440px;
     background-image: linear-gradient(
         to bottom,
         rgba(46, 47, 66, 0.7),
